  corresponding event even when the control is scrolled horizontally.

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima).
- Implement wxListBox::EnsureVisible() (Andreas Kling)
- Fixed wxCURSOR_HAND to map to GDK_HAND2 and not GDK_HAND1, for consistency
  with other applications.

wxMac:

- Fixed cursor for wxBusyCursor and wxContextHelp.


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

All (GUI):

- wxGraphicsContext implementations now all have the pixel's center at (0.5,0.5),
  avoiding differences in anti-aliasing between platforms.
- wxChoicebook now vertically centres a left-aligned controller.
- Improved borders and size of rich text dialogs.
- Added an optimization to UI updates on idle, by only updating when the
  window is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).
- Fixed a bug whereby acclerators including Enter were not processed
  when a tree control was focused.
- Fixed AUI hint drawing bug on Vista.
- Fixed a bug with a spurious border appearing on wxStatusBar under Windows
  XP/Vista.

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- wxSystemSettings::GetColour(wxSYS_COLOUR_WINDOW) now returns the background
  colour of text controls.
- wxSysColourChangedEvent now sent when styles change.
- wxFrame::ShowFullScreen now preserves the menubar's accelerators.
- Implemented wxGetClientDisplayRect() correctly for wxGTK and X11-based ports.
- Fixed wxSpinCtrl problem not reporting the correct value after calling
  SetValue().
- Fixed problem with key events sometimes being sent to parent window. This